--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,10 +14,27 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    signingConfigs {
+        debug {
+            storeFile file("D:\\AndroidProjects\\book\\bookocr.jks")
+            storePassword '123456'
+            keyAlias 'key0'
+            keyPassword '123456'
+        }
+        release {
+            storeFile file("D:\\AndroidProjects\\book\\bookocr.jks")
+            storePassword '123456'
+            keyAlias 'key0'
+            keyPassword '123456'
+        }
+    }
 
     buildTypes {
         release {
             minifyEnabled false
+            //把下面这两个加上就好了
+            aaptOptions.cruncherEnabled = false
+            aaptOptions.useNewCruncher = false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -27,6 +44,11 @@ android {
     }
     buildFeatures {
         viewBinding true
+    }
+}
+repositories {
+    flatDir {
+        dirs 'libs'
     }
 }
 
@@ -59,4 +81,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     androidTestImplementation "androidx.test.ext:junit:$rootProject.androidxJunitVersion"
+
+    compile fileTree(dir: 'libs',includes: ['*.jar'])
+    compile(name:'ocrsdk',ext:'aar')
 }
