--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,14 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:usesCleartextTraffic="true"
-        android:requestLegacyExternalStorage="true">
-
+        android:usesCleartextTraffic="true">
+        <activity android:name=".SearchActivity"
+            android:exported="true"></activity>
         <activity android:name=".SettingActivity" />
         <activity android:name=".ExamineActivity" />
         <activity
@@ -49,7 +50,6 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/public_file_path" />
         </provider>
-
     </application>
 
 </manifest>
